--- a/svm-latex-ms.tex
+++ b/svm-latex-ms.tex
@@ -15,6 +15,8 @@ $endif$
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{1em}
 
+\renewcommand*{\thefootnote}{\fnsymbol{footnote}}
+
 \usepackage{abstract}
 \renewcommand{\abstractname}{}    % clear the title
 \renewcommand{\absnamepos}{empty} % originally center
